--- a/assets/style.css
+++ b/assets/style.css
@@ -10,6 +10,7 @@ header{
     font-size: 40px;
     text-align: center;
     box-shadow: -70px 0px 30px white inset;
+    -webkit-text-stroke: 2px black;
 }
 
 .savedCity{
@@ -38,13 +39,14 @@ header{
 }
 
 .individualForecast{
-    color: aqua;
+    color: white;
     display: inline-block;
-    border: 4px solid black;
-    border-radius: 25px;
-    padding: 5px;
+    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
+    padding: 15px;
     line-height: 50px;
-    background-color: gray;
-    margin: 5px;
+    background-color: rgb(0, 0, 190);
+    margin: 0px;
     justify-content: center;
+    box-shadow: 0 -30px 30px white inset;
 }
