--- a/assets/style.css
+++ b/assets/style.css
@@ -41,12 +41,16 @@ header{
 .individualForecast{
     color: white;
     display: inline-block;
+    width: 175px;
     border-top-left-radius: 30px;
     border-top-right-radius: 30px;
-    padding: 15px;
+    padding: 10px 10px 40px 10px;
+    border-top: 3px solid black;
+    border-right: 3px solid black;
+    border-left: 3px solid black;
     line-height: 50px;
     background-color: rgb(0, 0, 190);
     margin: 0px;
     justify-content: center;
-    box-shadow: 0 -30px 30px white inset;
+    box-shadow: 0 -30px 20px white inset;
 }
