--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,7 @@
+body{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: white;
+}
 main{
     display: inline-flex;
 }
@@ -13,16 +17,36 @@ header{
     -webkit-text-stroke: 2px black;
 }
 
-.savedCity{
-    cursor: pointer;
-}
-#searchArea{
-    margin: 20px;
-    border: 1px solid red;
+#searchBtn{
+border-style: outset;
+padding: 2px;
 }
 
+#searchBtn:active{
+    box-shadow: 1px 1px 5px black;
+    font-size: larger;
+    padding: 0px;
+}
+
+#searchArea{
+    width: 270px;
+    margin: 20px;
+    line-height: 50px;
+    padding: 10px;
+    border: 4px solid red;
+    border-style: ridge;
+}
+.savedCity{
+    cursor: pointer;
+    text-align: center;
+    border-radius: 10px;
+    background-color: blue;
+    color: white;
+    border: 2px solid black;
+    margin: 5px;
+    line-height: 30px;
+}
 #weatherDisplay{
-    color: blue;
 }
 
 #searchBtn{
@@ -34,23 +58,37 @@ header{
     display: inline;
 }
 
+#currentDay{
+    line-height: 40px;
+}
 #currentCity{
-    padding: 20px
+    padding: 20px;
+    font-size: 40px;
+    margin: 30px 30px 10px 30px;
 }
 
+.currentMonth{
+    font-size: 30px;
+}
+
+.emoji{
+    color: yellow;
+    font-size: 40px;
+    float: right;
+    margin-right: 20px;
+}
 .individualForecast{
+    font-size: 20px;
     color: white;
     display: inline-block;
-    width: 175px;
+    width: 190px;
     border-top-left-radius: 30px;
     border-top-right-radius: 30px;
     padding: 10px 10px 40px 10px;
     border-top: 3px solid black;
-    border-right: 3px solid black;
-    border-left: 3px solid black;
-    line-height: 50px;
+    line-height: 70px;
     background-color: rgb(0, 0, 190);
     margin: 0px;
     justify-content: center;
-    box-shadow: 0 -30px 20px white inset;
+    box-shadow: 0 -30px 10px white inset;
 }
